--- a/src/AppBundle/Resources/views/Home/queryRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryRegime.html.twig
@@ -47,6 +47,10 @@
     </div>
     {% if app.user is not null %}
         <h2 class="description"> Įvertinkite programą </h2>
+        {% if app.user is not null %}
+        Tavo ivertinimas: {{ regime.userRating(app.user.id) }}
+        {% endif %}
+        <br>
         <p>Programos reitingas: {{ regime.rating }}</p>
         {{ form_start(formRate, {'attr':{'id':'rating'}}) }}
         <div class="rating">
