--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -16,10 +16,15 @@
         {% endfor %}
     {% endfor %}
 {% endif %}
+<div class="col-md-2">
 
-<div>
+</div>
+<div class="col-md-8">
     {% block fos_user_content %}
     {% endblock fos_user_content %}
+</div>
+<div class="col-md-2">
+
 </div>
 </body>
 <script src="{{ asset('assets/jquery.min.js') }}"></script>
