--- a/src/AppBundle/Resources/views/Home/createRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/createRegime.html.twig
@@ -25,7 +25,7 @@
             <label class="btn btn-primary veryHard"> {{ form_widget(form.difficulty.4) }} Labai sunki</label>
         </div>
         {{ form_widget(form.difficulty, {'attr':{'class':'btn-group' , 'data-toggle':'buttons'}}) }}
-        <h1> Programos aprašymas <span class="req">*</span> </h1>
+        <h1> Programos aprašymas <span style="color:yellow" class="req">*</span> </h1>
         <div class="field-wrap">
             {{ form_widget(form.description, {'attr':{'autocomplete':'off', 'rows':6}}) }}
         </div>
