--- a/src/AppBundle/Resources/views/Home/queryRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryRegime.html.twig
@@ -62,7 +62,7 @@
             {{ form_widget(formRate.rating.0, {'attr':{'class':'radio_item'}}) }}
 
             {% for i in [4,3,2,1,0] %}
-                <label id="{{ i+1 }}" class="label_item {% if regime.rating > i %} coloredStar {% endif %}" for="form_rating_{{ i }}"> <span>&#9734</span> </label>
+                <label id="{{ i+1 }}" class="label_item {% if regime.userRating(app.user.id) > i %} coloredStar {% endif %}" for="form_rating_{{ i }}"> <span>&#9734</span> </label>
             {% endfor %}
         </div>
         {{ form_end(formRate) }}
