--- a/app/Resources/style/registerStyle.css
+++ b/app/Resources/style/registerStyle.css
@@ -14,7 +14,6 @@ html {
 
 body {
     background: #c1bdba;
-    font-family: 'Titillium Web', sans-serif;
 }
 
 a {
@@ -24,7 +23,7 @@ a {
     transition: .5s ease;
 }
 a:hover {
-    color: #fffa3d;
+    color: #2f2c0e;
 }
 
 .form {
@@ -181,7 +180,14 @@ textarea {
     text-align: right;
 }
 
-label .btn
+.description
 {
+    font-family:Oswald;
+    font-size:40px;
+}
 
+.checkbox
+{
+    width: 25px;
+    float: left;
 }
