changed regimes to workouts

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,12 +9,12 @@
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/headerStyle.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/bodyStyle.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('css/regimeInputFormStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/workoutInputFormStyle.css') }}"/>
         <link rel="stylesheet" href="{{ asset('fonts/glyphicons-haflings-regular.ttf') }}">
         <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
-        <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/workoutStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/regimeShowStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/workoutShowStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/homePageNew.css') }}">
         <link rel="stylesheet" href="{{ asset('css/registerStyle.css') }}">
     {% endblock %}
@@ -51,7 +51,7 @@
     <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('js/regimeModule.js') }}"></script>
+    <script src="{{ asset('js/workoutModule.js') }}"></script>
     <script src="{{ asset('js/commentLengthControl.js') }}"></script>
     <script src="{{ asset('js/ratings.js') }}"></script>
     <script src="{{ asset('js/smoothscroll.js') }}"></script>
