--- a/app/Resources/views/inc/left_column.html.twig
+++ b/app/Resources/views/inc/left_column.html.twig
@@ -5,7 +5,7 @@
                 <li> <a href="">Treniruočių programos</a> </li>
                 <li> <a href="">Reitinguotos programos</a> </li>
                 <li> <a href="">Rodyti progresa</a> </li>
-                <li> <a href="{{ path('app.createRegime') }}"> Sukurti programa </a></li>
+                <li> <a href="{{ path('app.createWorkout') }}"> Sukurti programa </a></li>
             </ul>
         </nav>
     </div>
