--- a/src/AppBundle/Resources/views/Home/activateWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/activateWorkout.html.twig
@@ -3,7 +3,7 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
-    {%  if app.user.activeregime is not null  %}
+    {%  if app.user.activeworkout is not null  %}
     Programa aktyvuota!
     {% endif %}
     {% endif %}
