--- a/src/AppBundle/Resources/views/Home/createWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/createWorkout.html.twig
@@ -1,4 +1,4 @@
-{% extends 'newRegimeTemplate.html.twig' %}
+{% extends 'newWorkoutTemplate.html.twig' %}
 
 {% block content %}
     <div class="form">
