--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -9,7 +9,7 @@
                 <div class="col-md-12 col-sm-12">
                     <h1 class="home wow fadeInDown"> HOME <span class="homeSpan">COACH</span></h1>
                     {% if app.user is not null %}
-                        <a href="{{ path('app.createRegime') }}" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">SUKURTI PROGRAMĄ</a>
+                        <a href="{{ path('app.createWorkout') }}" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">SUKURTI PROGRAMĄ</a>
                     {% else %}
                         <a href="/login" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.4s">PRISIJUNGTI</a>
                     {% endif %}
@@ -21,7 +21,7 @@
     </section>
 
     <div class="container" id="mainSection">
-        <div ng-app="regimeApp" ng-controller="regimesController">
+        <div ng-app="workoutApp" ng-controller="workoutsController">
 
             <div style="margin-top:45px;">
                 <input type="text" placeholder="Paieška" id="search" ng-change="searchInput(param)" ng-model="param.searchKey">
@@ -40,14 +40,14 @@
             </div>
             <div infinite-scroll='loadMore()' infinite-scroll-distance='1'>
                 <div class="row no-collapse-1 noOverflow">
-                    <section class="col-md-4" ng-repeat="regime in regimes">
+                    <section class="col-md-4" ng-repeat="workout in workouts">
                         <div class="box">
-                            <h3><span ng-if="regime.rating" class="infoStar">{[{ regime.rating }]} &starf;</span></h3>
-                            <h2 style="font-family: Oswald"><a href="regimes/{[{ regime.id }]}"> {[{ regime.title }]}</a> </h2>
-                            <p> Autorius: <a href="showProfile/{[{ regime.creator_id }]}"> {[{ regime.username }]}</a></p>
-                            <p> {[{ regime.data_created }]}</p>
-                            <p class="description">{[{ regime.description | limitTo:150 }]}</p>
-                            <a href="regimes/{[{ regime.id }]}" class="button">Daugiau</a>
+                            <h3><span ng-if="workout.rating" class="infoStar">{[{ workout.rating }]} &starf;</span></h3>
+                            <h2 style="font-family: Oswald"><a href="workouts/{[{ workout.id }]}"> {[{ workout.title }]}</a> </h2>
+                            <p> Autorius: <a href="showProfile/{[{ workout.creator_id }]}"> {[{ workout.username }]}</a></p>
+                            <p> {[{ workout.data_created }]}</p>
+                            <p class="description">{[{ workout.description | limitTo:150 }]}</p>
+                            <a href="workouts/{[{ workout.id }]}" class="button">Daugiau</a>
                         </div>
                     </section>
                 </div>
@@ -68,7 +68,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right main-navigation">
                     {% if app.user is not null %}
-                        <li><a href="{{ path('app.createRegime') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
+                        <li><a href="{{ path('app.createWorkout') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
                         <li><span class="loginInfo"> {{ 'layout.logged_in_as' | trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> </li>
                         <li> <a href="{{ path('fos_user_security_logout') }}">
                                 <span class="glyphicon glyphicon-off"></span>
