--- a/src/AppBundle/Resources/views/Home/rateWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/rateWorkout.html.twig
@@ -9,7 +9,7 @@
         {{ form_widget(form.rating.1, {'attr':{'class':'radio_item'}}) }}
         {{ form_widget(form.rating.0, {'attr':{'class':'radio_item'}}) }}
         {% for i in [4,3,2,1,0] %}
-            <label id="{{ i+1 }}" class="label_item {% if regime.rating > i %} coloredStar {% endif %}" for="form_rating_{{ i }}"> <span>&#9734</span> </label>
+            <label id="{{ i+1 }}" class="label_item {% if workout.rating > i %} coloredStar {% endif %}" for="form_rating_{{ i }}"> <span>&#9734</span> </label>
         {% endfor %}
     </div>
     {{ form_end(form) }}
