added moment.js package

--- a/app/Resources/views/base2.html.twig
+++ b/app/Resources/views/base2.html.twig
@@ -34,7 +34,9 @@
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/ng-infinite-scroll.js') }}"></script>
-    <script src="{{ asset('assets/bootstrap-select.min.js.js') }}"></script>
+    <script src="{{ asset('assets/moment.min.js') }}"></script>
+    <script src="{{ asset('assets/lt.js') }}"></script>
+    <script src="{{ asset('assets/angular-moment.min.js') }}"></script>
     <script src="{{ asset('js/smoothscroll.js') }}"></script>
     <script src="{{ asset('js/jquery.nav.js') }}"></script>
     <script src="{{ asset('js/jquery.parallax.js') }}"></script>
@@ -49,9 +51,6 @@
         $(document).ready(function(){
             $('[data-toggle="popover"]').popover();
         });
-    </script>
-    <script>
-        $('select option[value="all"]').attr('selected','selected');
     </script>
 {% endblock %}
 
