--- a/src/AppBundle/Resources/views/Home/indexShow.html.twig
+++ b/src/AppBundle/Resources/views/Home/indexShow.html.twig
@@ -45,7 +45,7 @@
                         <h3><span ng-if="regime.rating" class="infoStar">{[{ regime.rating }]} &starf;</span></h3>
                         <h2 style="font-family: Oswald"><a href="regimes/{[{ regime.id }]}"> {[{ regime.title }]}</a> </h2>
                         <p> Autorius: <a href="showProfile/{[{ regime.creator_id }]}"> {[{ regime.username }]}</a></p>
-                        <p> {[{ regime.data_created }]}</p>
+                        <p> Sukurta <span am-time-ago="regime.data_created"></span></p>
                         <p class="description">{[{ regime.description | limitTo:150 }]}</p>
                         <a href="regimes/{[{ regime.id }]}" class="button">Daugiau</a>
                     </div>
