added tab switch between comments, navbar

--- a/app/Resources/style/workoutDetailsStyle.sass
+++ b/app/Resources/style/workoutDetailsStyle.sass
@@ -68,6 +68,7 @@ figure
   font-family: Oswald
   font-size: 50px
   text-align: center
+  color: white
 
 .form
   background: rgba(19, 35, 47, 0.9)
@@ -79,10 +80,9 @@ figure
 body
   background: #c1bdba
   color: white
-  font-family: Oswald
   font-size: 18px
 
-.button
+button
   border: 0
   outline: none
   border-radius: 0
@@ -96,6 +96,13 @@ body
   -webkit-transition: all 0.5s ease
   transition: all 0.5s ease
   -webkit-appearance: none
+  width: 100%
+  margin-top: 10px
+  border-radius: 5px
+
+.button:hover, .button:focus
+  background: #fcbe07
+  cursor: pointer
 
 div.inline
   float: left
