--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -52,6 +52,7 @@
                     </section>
                 </div>
             </div>
+            <p style="margin:200px; text-align: center;" ng-if="workouts.length==0">Neradome nei vienos programos</p>
         </div>
     </div>
     <section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
