--- a/app/Resources/views/base3.html.twig
+++ b/app/Resources/views/base3.html.twig
@@ -10,25 +10,54 @@
         <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
         <link rel="stylesheet" href="{{ asset('css/workoutStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/workoutDetailsStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('bower_components/rateYo/min/jquery.rateyo.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/navigation.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
 {% block body %}
-    <div id="fb-root"></div>
+    <section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
+        <div class="container">
+
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                </button>
+                <a href="/" class="navbar-brand"> <span style="color:orange"> HOME </span> COACH </a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right main-navigation">
+                    {% if app.user is not null %}
+                        <li><a href="{{ path('app.createWorkout') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
+                        <li style="color: black;"><span class="loginInfo"> {{ 'layout.logged_in_as' | trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> </li>
+                        <li> <a href="{{ path('fos_user_security_logout') }}">
+                                <span class="glyphicon glyphicon-off"></span>
+                                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                            </a></li>
+                    {% else %}
+                        <li><a href="/login" class="smoothScroll">PRISIJUNGTI</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+
+        </div>
+    </section>
     <div class="container">
         {% block container %}
         <div class="container-fluid text-center">
             <div class="row content">
-                <div class="col-md-2">
+                <div class="col-md-1">
 
                 </div>
-                <div class="col-md-8 text-left form">
+                <div class="col-md-10 text-left form">
                     {% block content %}
                     {% endblock %}
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-1">
 
                 </div>
                 {% endblock %}
