--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
     <link rel="stylesheet" href="{{ asset('css/registerStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navigation.css') }}">
 </head>
 <body>
+<section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
+    <div class="container">
 
+        <div class="navbar-header">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"> <span style="color:orange"> HOME </span> COACH </a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right main-navigation">
+
+            </ul>
+        </div>
+
+    </div>
+</section>
 {% if app.request.hasPreviousSession %}
     {% for type, messages in app.session.flashbag.all() %}
         {% for message in messages %}
