--- a/app/Resources/style/pageStyle.css
+++ b/app/Resources/style/pageStyle.css
@@ -82,11 +82,12 @@
 
 	.box {
 		padding: 3em 2em;
-		background: #FFF;
+		background: rgba(19, 35, 47, 0.9);
 		text-align: center;
-		border-radius: 0px 0px 6px 6px;
+		border-radius: 8px 8px 8px 8px;
 		word-wrap: break-word;
 		height:500px;
+		color:white;
 	}
 
 	div section
