--- a/app/Resources/style/registerStyle.css
+++ b/app/Resources/style/registerStyle.css
@@ -14,6 +14,7 @@ html {
 
 body {
     background: #c1bdba;
+    font-family: 'Open Sans',sans-serif;
 }
 
 a {
@@ -70,7 +71,7 @@ a:hover {
 h1 {
     text-align: center;
     color: #ffffff;
-    font-weight: 300;
+    font-weight: 700;
     margin: 0 0 40px;
 }
 
@@ -190,4 +191,9 @@ textarea {
 {
     width: 25px;
     float: left;
+}
+
+#form_difficulty
+{
+    margin-bottom:40px;
 }
