--- a/app/Resources/style/style.css
+++ b/app/Resources/style/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-		background: #ffffff;
+    background: rgba(19, 35, 47, 0.9);
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     position: relative;
